[tool.poetry]
name = "pay-service"
version = "0.1.0"
description = ""
authors = ["Natalia Novikova <novikova.nm@phystech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
alembic = "^1.14.0"
sqlalchemy = "^2.0.36"
ruff = "^0.7.3"
mypy = "^1.13.0"
dynaconf = "^3.2.6"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
